gcc/testsuite/gdc.test/compilable/test15565.d
alias X2 = X;
extern (C++, ns) struct X {}
